force-app/main/default/objects/Contact/fields/Can_Receive_SMS__c.field-meta.xml
<CustomField>
    <fullName>Can_Receive_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Receive SMS</label>
    <type>Checkbox</type>
</CustomField>