force-app/main/default/objects/Contact/fields/Membership_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Membership_Benefits__c</fullName>
    <label>Membership Benefits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>