force-app/main/default/objects/Contact/fields/Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>Membership_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Level</label>
    <referenceTo>Member_Level__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>