force-app/main/default/objects/Contact/fields/Possible_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Possible_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this Contact may have duplicate Contacts in the database that should be reviewed.</description>
    <inlineHelpText>Identifies new donor as a potential duplicate of a Contact already in the system</inlineHelpText>
    <label>Possible Duplicate</label>
    <type>Checkbox</type>
</CustomField>