force-app/main/default/objects/Contact/fields/Standardized_Address_Message__c.field-meta.xml
<CustomField>
    <fullName>Standardized_Address_Message__c</fullName>
    <label>Standardized Address Message</label>
    <type>TextArea</type>
</CustomField>