force-app/main/default/objects/Contact/fields/Standardized_City__c.field-meta.xml
<CustomField>
    <fullName>Standardized_City__c</fullName>
    <label>Standardized City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>