force-app/main/default/objects/Contact/fields/Standardized_State__c.field-meta.xml
<CustomField>
    <fullName>Standardized_State__c</fullName>
    <label>Standardized State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>