force-app/main/default/objects/Contact/fields/Sum_Annualized_Sustaining_Donations__c.field-meta.xml
<CustomField>
    <fullName>Sum_Annualized_Sustaining_Donations__c</fullName>
    <inlineHelpText>The annualized (x 12) sum of all active sustaining donations</inlineHelpText>
    <label>Sum Annualized Sustaining Donations</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>