force-app/main/default/objects/Contact/fields/Sum_Inactive_Last_Year_Donations__c.field-meta.xml
<CustomField>
    <fullName>Sum_Inactive_Last_Year_Donations__c</fullName>
    <inlineHelpText>The sum of all donations from inactive sustaining donations in the last year</inlineHelpText>
    <label>Sum Inactive Last Year Donations</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>