force-app/main/default/objects/Contact/fields/Sum_One_Time_Last_Year_Donations__c.field-meta.xml
<CustomField>
    <fullName>Sum_One_Time_Last_Year_Donations__c</fullName>
    <inlineHelpText>The sum of all of the one time donations from this Contact within the last year</inlineHelpText>
    <label>Sum One Time Last Year Donations</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>