force-app/main/default/objects/Contact/fields/Total_Annualized_Donation_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Annualized_Donation_Value__c</fullName>
    <formula>Sum_One_Time_Last_Year_Donations__c +   Sum_Annualized_Sustaining_Donations__c + Sum_Inactive_Last_Year_Donations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum total of all donations from this Contact in the last year</inlineHelpText>
    <label>Total Annualized Donation Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>