force-app/main/default/objects/Contact/listViews/Possible_Duplicate.listView-meta.xml
<ListView>
    <fullName>Possible_Duplicate</fullName>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Possible_Duplicate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Possible Duplicate</label>
</ListView>