force-app/main/default/objects/Contact/listViews/Unverified_Mailing_Address.listView-meta.xml
<ListView>
    <fullName>Unverified_Mailing_Address</fullName>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>Standardized_Address_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Address_Verification_Status__c</field>
        <operation>equals</operation>
        <value>Unverified</value>
    </filters>
    <label>Unverified Mailing Address</label>
</ListView>